# CuteIPC

./: .gitignore  .travis.yml  CMakeLists.txt  CuteIPC.qbs  Doxyfile  README.md
CMake/: CompilerFlags.cmake
example/client/: CMakeLists.txt
example/client/src/: TestObjectSlot.cpp  TestObjectSlot.h  main.cpp
example/server/: CMakeLists.txt
example/server/src/: TestObject.cpp  TestObject.h  main.cpp
include/: CuteIPCInterface.h  CuteIPCService.h
src/: CuteIPCInterface.cpp  CuteIPCInterface.h  CuteIPCInterfaceConnection.cpp  CuteIPCInterfaceConnection_p.h  CuteIPCInterfaceWorker.cpp  CuteIPCInterfaceWorker.h  CuteIPCInterface_p.h  CuteIPCLoopVector.cpp  CuteIPCLoopVector.h  CuteIPCMarshaller.cpp  CuteIPCMarshaller_p.h  CuteIPCMessage.cpp  CuteIPCMessage_p.h  CuteIPCService.cpp  CuteIPCService.h  CuteIPCServiceConnection.cpp  CuteIPCServiceConnection_p.h  CuteIPCService_p.h  CuteIPCSignalHandler.cpp  CuteIPCSignalHandler_p.h  CuteIPCSlotHandler.cpp  CuteIPCSlotHandler_p.h
test/: CMakeLists.txt  test.qbs
test/images/: images.qrc
test/src/: InterfaceTestObject.cpp  InterfaceTestObject.h  ServiceTestObject.cpp  ServiceTestObject.h  SignalWaiter.cpp  SignalWaiter.h  TestErrorsHandling.cpp  TestErrorsHandling.h  TestLocalTcpCommunication.cpp  TestLocalTcpCommunication.h  TestMessageMarshalling.cpp  TestMessageMarshalling.h  TestSignalHandler.cpp  TestSignalHandler.h  TestSocketCommunication.cpp  TestSocketCommunication.h  TestTcpCommunication.cpp  TestTcpCommunication.h  TestTcpServer.cpp  TestTcpServer.h
