CMAKE_MINIMUM_REQUIRED(VERSION 2.8.12)

# Qt
MESSAGE("Searching for preferred Qt version...")
IF (DEFINED QT_DESIRED_VERSION)
  IF(QT_DESIRED_VERSION MATCHES 5)
    SET(QT_VERSION_MAJOR 5)
    FIND_PACKAGE(Qt5Core REQUIRED)
    FIND_PACKAGE(Qt5Network REQUIRED)
  ELSE (QT_DESIRED_VERSION MATCHES 5)
    IF (QT_DESIRED_VERSION MATCHES 4)
      FIND_PACKAGE(Qt4 COMPONENTS QtCore QtNetwork REQUIRED)
      INCLUDE(${QT_USE_FILE})
    ELSE (QT_DESIRED_VERSION MATCHES 4)
      MESSAGE(FATAL_ERROR "You must specify the 4th or the 5th version of Qt")
    ENDIF(QT_DESIRED_VERSION MATCHES 4)
  ENDIF (QT_DESIRED_VERSION MATCHES 5)
ELSE (DEFINED QT_DESIRED_VERSION)
  FIND_PACKAGE(Qt5Core QUIET)
  FIND_PACKAGE(Qt5Network QUIET)
  IF (Qt5Core_FOUND)
    SET(QT_VERSION_MAJOR 5)
  ELSE(Qt5Core_FOUND)
    MESSAGE("Qt 5 not found, searching for Qt4")
    FIND_PACKAGE(Qt4 REQUIRED)
  ENDIF(Qt5Core_FOUND)
ENDIF (DEFINED QT_DESIRED_VERSION)
MESSAGE("Qt version is used: ${QT_VERSION_MAJOR}")

IF (QT_VERSION_MAJOR MATCHES 5)
  # Force cmake 2.8.8 in order to have a decent support of Qt5
  CMAKE_MINIMUM_REQUIRED(VERSION 2.8.11)
ENDIF()

IF (QT_VERSION_MAJOR MATCHES 5)
  INCLUDE_DIRECTORIES(${CMAKE_CURRENT_BINARY_DIR} ${Qt5Core_INCLUDE_DIRS} ${Qt5Network_INCLUDE_DIRS})
ELSE()
  INCLUDE_DIRECTORIES(${CMAKE_CURRENT_BINARY_DIR})
ENDIF()

SET(sources
  src/main.cpp
  src/TestObjectSlot.cpp
)

SET(moc_headers
  src/TestObjectSlot.h
)

IF (QT_VERSION_MAJOR MATCHES 5)
  QT5_WRAP_CPP(sources ${moc_headers})
ELSE()
  QT4_WRAP_CPP(sources ${moc_headers})
ENDIF()

SET(bin_target CuteIPCClient)
ADD_EXECUTABLE(${bin_target} ${sources})

IF (QT_VERSION_MAJOR MATCHES 5)
  TARGET_LINK_LIBRARIES(${bin_target} ${Qt5Core_LIBRARIES} ${Qt5Network_LIBRARIES} CuteIPC)
ELSE()
  TARGET_LINK_LIBRARIES(${bin_target} ${QT_LIBRARIES} CuteIPC)
ENDIF()
